Resolve bottom spacing issue

--- a/style/footer.less
+++ b/style/footer.less
@@ -2,6 +2,7 @@ div#footer {
   position: relative;
   width: 100%;
   overflow: hidden;
+  line-height: 0;
 
   img {
     width: 100%;
@@ -15,6 +16,8 @@ div#footer {
 
     right: 1rem;
     bottom: 1rem;
+
+    line-height: 2.5rem;
 
     i {
       width: 0;
